samples/_failures_safe/1761600578_8a70e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e67b04f1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e67b04f1.c:174:9: error: expected declaration or statement at end of input
  174 |         token_count++;
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_e67b04f1.c:174:9: error: expected declaration or statement at end of input
